--- a/inmobiliaria/index.html
+++ b/inmobiliaria/index.html
@@ -99,12 +99,25 @@
           </section>
           <section id="columnas">
             <br><h2>Señor Propietario</h2>
+            <br>
+            <br>
             <div class="row">
-              <div class="col-sm-4">Desea Alquilar Su Propiedad</div>
-              <div class="col-sm-4">Desea Vender Su Propiedad</div>
-              <div class="col-sm-4">Deseas que Administremos su propiedad</div>
+              <div class="col-sm-3">Quienes Somos</div>
+              <div class="col-sm-3"><img src="/imagenes/propiedad.jpg" alt="">
+                <h5>Alquile Su Propiedad</h5>
+                <button>Ampliar</button>
+               </div>
+              <div class="col-sm-3"><img src="/imagenes/pesos.jpg" alt"">
+               <h5>Venda Su Propiedad</h5>
+               <button>Ampliar</button>
+              </div>
+              <div class="col-sm-3"><img src="/imagenes/administrar.jpg" alt="">
+              <h5>  Administramos Su propiedad</h5>
+              <button>Ampliar</button>
             </div>
+             </div>
           </section>
+
        </main>
      
 
