--- a/inmobiliaria/index.html
+++ b/inmobiliaria/index.html
@@ -103,15 +103,15 @@
             <br>
             <div class="row">
               <div class="col-sm-3">Quienes Somos</div>
-              <div class="col-sm-3"><img src="/imagenes/propiedad.jpg" alt="">
+              <div class="col-sm-3"><img src="imagenes/propiedad.jpg" alt="">
                 <h5>Alquile Su Propiedad</h5>
                 <button>Ampliar</button>
                </div>
-              <div class="col-sm-3"><img src="/imagenes/pesos.jpg" alt"">
+              <div class="col-sm-3"><img src="imagenes/pesos.jpg" alt="">
                <h5>Venda Su Propiedad</h5>
                <button>Ampliar</button>
               </div>
-              <div class="col-sm-3"><img src="/imagenes/administrar.jpg" alt="">
+              <div class="col-sm-3"><img src="imagenes/administrar.jpg" alt="">
               <h5>  Administramos Su propiedad</h5>
               <button>Ampliar</button>
             </div>
